courses/430_programming-languages/assignment-6/tests/error/hw4_error17.nex
print "should not get here:n";
1 / 0;
(1 > 2 ? false : "bob") + 3;
